
v0.1.0 (2013-03-16):

     * There are now test archives for OS-9 and OS-9/68k (OSK) and a
       workaround for a bug in the OSK lha tool on this platform. OSK level
       0 extended areas are also supported.
     * Extracted files are now written using O_EXCL, which prevents
       malicious symbolic links being used to redirect output.
     * Directory paths containing '..' as a directory name are now
       sanitized, to prevent malicious archives being able to overwrite
       arbitrary files on the filesystem.
     * Symbolic links are now extracted in a safer way, being created as
       dummy files that are overwritten with proper symbolic links at the
       end of extraction. This is the same behavior used by GNU tar to
       prevent malicious use of symbolic links.
     * Automake 1.13 is now properly supported (thanks Jan Engelhardt).
       Processing of archives read from IPC pipes (including stdin) has
       been fixed.

v0.0.7 (2012-06-02):

     * Extraction and listing of Unix symbolic links is now supported.
     * Decompression code for the "old" PMarc archive algorithm (-pm1-) has
       been added.
     * Support has been added for Unix LHA level 0 header extended areas
       (so level 0 archives with Unix metadata are now listed and extracted
       correctly).
     * The Unix permissions field in the list output for directory entries
       has been fixed.
     * The library header files have been fixed so that they can be included
       in C++ code.
     * The LHADecoder interface, for extracting raw compressed data, has been
       added to the public header files.
     * The Unix LHA test archives have been regenerated and improved.
     * A "ghost testing" tool has been added for testing ghost compression
       algorithms such as -pm1-.
     * The list output tests have been fixed to be repeatable regardless of
       the current date.
     * Build of the fuzzer tool has been fixed.

v0.0.6 (2012-05-17):
