@@ -12,7 +12,7 @@ Library:
  * Decompressors for obscure algorithms:
     * -lh2-, -lh3- (experimental LHA?)
     * LHark -lh7- (modified -lh5-)
-    * -lx1-, -lhx- (unlha32 obscure/experimental?)
+    * -lx1- (unlha32 obscure/experimental?)
 
 Command line tool:
  * Create/update/modify archives.
