@@ -229,6 +229,9 @@ test_archive lha_os9_211c/h2_lh0.lzh
 test_archive lha_os9_211c/h2_lh1.lzh
 test_archive lha_os9_211c/h2_subdir.lzh
 
+test_archive unlha32/h2_lhx.lzh
+test_archive unlha32/lhx_long.lzh
+
 test_archive regression/abspath.lzh
 test_archive regression/badterm.lzh
 SUCCESS_EXPECTED=false test_archive regression/truncated.lzh
